git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@4980 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -707,6 +707,9 @@
 	]
 	[ 0.3.7
 		[ Note
+			Almost all files were changed, so there is
+			no point of listing them in here.
+			
 			You are advised to update all your data files.
 		]
 	}
