* Finished todo, scheduled release date: 20th Nov 2011 20:11
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@4981 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/TODO
+++ b/doc/TODO
@@ -19,6 +19,12 @@
 	/ban window needs fix
 		Assigned to: Elf
 
+	Implement war system Lua & erase definition for compilation
+		Assigned to: Elf
+
+	Fix ground cache for professional hosters as currently it may cause crash in certain circumstances
+		Assigned to: Elf
+
 	Tibia's 'Like' feature:
 		Assigned to: ?
 
