--- a/doc/TODO
+++ b/doc/TODO
@@ -17,19 +17,13 @@
 
 [ LIST
 	/ban window needs fix
-		Assigned to: Elf
+		Assigned to: BeniS, Elf
 
-	Implement war system Lua & erase definition for compilation
+	Auction (Market) System from Tibia 9.4
 		Assigned to: Elf
 
 	Fix ground cache for professional hosters as currently it may cause crash in certain circumstances
 		Assigned to: Elf
-
-	Tibia's 'Like' feature:
-		Assigned to: ?
-
-	Tibia's report window:
-		Assigned to: ?
 
 	Tibia's position swapping:
 		Assigned to: ?
