* Updated the documentation a little
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5275 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/TODO
+++ b/doc/TODO
@@ -16,11 +16,8 @@
 ]
 
 [ LIST
-	Fix ground cache for professional hosters as currently it may cause crash in certain circumstances
-		Assigned to: Elf
-
 	Auction (Market) System from Tibia 9.4
-		Assigned to: Elf
+		Assigned to: Talaturen, Elf
 
 	Tibia's position swapping:
 		Assigned to: ?
