* Account names. * Some market code, it's far from finished though.
This revision and following ones in 0.2 shouldn't be used in production before 0.2.12 has been released, the changes may not have been tested enough yet!


git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5318 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -24,9 +24,11 @@
 	M config.lua
 	  data/
 	M	global.lua
-		actions/scripts/other/
-	M		changegold.lua
-	M		fluids.lua
+		actions/
+	M		actions.xml
+			scripts/other/
+	M			changegold.lua
+	M			fluids.lua
 		items/
 	M		items.otb
 	M		items.xml
@@ -71,4 +73,5 @@
 	New depot structure.
 	Updated items.
 	Fixed a trade bug (thanks to manuel220).
+	Now using account names.
 ]
