* Updated items.otb. * Misc. fixes.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5327 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -69,7 +69,7 @@
 	Added database manager for automatic database updates and table optimizations.
 	It is now possible to register multiple creature events with the same type for one creature.
 	Added Ladybug and Manta mounts.
-	Added Red Baron outfit.
+	Added Entrepreneur outfit.
 	New depot structure.
 	Updated items.
 	Fixed a trade bug (thanks to manuel220).
