* Yet another update to items.otb for version 9.44 (for some reason new objects are being added without increasing version number). * Optimized account manager code. * onCreatureDisappear for will now properly be called for NPC's, this should also fix a potential crash where player had trade window open and the NPC was be removed. * Misc. fixes.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5406 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -74,4 +74,6 @@
 	Updated items.
 	Fixed a trade bug (thanks to manuel220).
 	Now using account names.
+	onCreatureDisappear will now properly be called for NPC's.
+	A lot of miscellaneous cleanups, fixes and optimizations.
 ]
