* Forgot to add one of the changed files to the changelog.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5407 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -35,6 +35,7 @@
 		monster/
 	M		slime.xml
 	M		slime2.xml
+	M	npc/lib/npcsystem/npchandler.lua
 	M	talkactions/scripts/deathlist.lua
 		XML/
 	M		outfits.xml
