* Experience, healing and damage messages will now only show for spectators on the same floor.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5443 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -76,5 +76,6 @@
 	Fixed a trade bug (thanks to manuel220).
 	Now using account names.
 	onCreatureDisappear will now properly be called for NPC's.
+	Experience, healing and damage messages will now only show for spectators on the same floor.
 	A lot of miscellaneous cleanups, fixes and optimizations.
 ]
