* More market code, it is still unfinished though. * Misc. cleanups and optimizations.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5445 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -45,6 +45,7 @@
 [ Milestone
 	Game protocol 9.44 support.
 	Revised database system.
+	Market system.
 	Fixed element damages.
 	Fixed a bug with Lua function getPlayersByIP, it was ignoring mask even if set.
 	Healing messages will no longer show if health change is 0.
