* Major optimizations to Account Manager code and a few bug fixes. * Fixed an error in the SQLite query to create market table.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5451 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -78,5 +78,6 @@
 	Now using account names.
 	onCreatureDisappear will now properly be called for NPC's.
 	Experience, healing and damage messages will now only show for spectators on the same floor.
+	Major optimizations to Account Manager code.
 	A lot of miscellaneous cleanups, fixes and optimizations.
 ]
