* Optimized the depot loading code. * Updated databasemanager to drop the trigger that was removed.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5461 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -79,5 +79,6 @@
 	onCreatureDisappear will now properly be called for NPC's.
 	Experience, healing and damage messages will now only show for spectators on the same floor.
 	Major optimizations to Account Manager code.
+	Removed a SQLite trigger that truncated some tables when players were updated (the server already does this, and it caused a bug).
 	A lot of miscellaneous cleanups, fixes and optimizations.
 ]
