--- a/doc/README
+++ b/doc/README
@@ -68,35 +68,18 @@
 ]
 
 [ COMPILING
-	Linux
-		Download required packages
-			Debian \ Ubuntu
-				Launch a terminal, and paste in this command:
-					sudo apt-get install subversion autoconf automake make g++ libxml2 libxml2-dev libxml++2.6-dev lua5.1 liblua5.1-0 liblua5.1-0-dev libboost-dev libboost-date-time-dev libboost-regex-dev libboost-thread-dev libmysql++-dev libgmp3-dev liblua5.1-sql-mysql2 liblua5.1-sql-sqlite2 liblua5.1-sql-mysql-dev liblua5.1-sql-sqlite-dev libsqlite3-dev
-					wget http://heanet.dl.sourceforge.net/sourceforge/asio/boost_asio_1_4_7.tar.gz
-					tar -xf boost_asio_1_4_7.tar.gz
-					sudo cp -ar boost_asio_1_4_7/boost/* /usr/include/boost/
-					sudo g++ boost_asio_1_4_7/libs/system/src/error_code.cpp -c -o /usr/lib/libboost_system.a
+	Linux: Debian/Ubuntu
+		Downloading required packages
+			Launch a terminal, and paste in this command:
+				apt-get install build-essential subversion libboost-dev libxml2-dev liblua5.1-0-dev libgmp3-dev libmysql++-dev libsqlite3-dev libboost-thread-dev libboost-system-dev
 
-			sudo: command not found
-				If you're running Debian it's possible that you don't
-				have sudo, if that's the case then you can run 'su' and
-				you will have root access. Then execute the commands
-				without 'sudo' in the beginning.
-
-		Download sourcecode
+		Downloading the source code
 			Launch a terminal, and paste in this command:
 				svn co svn://svn.otland.net/public/forgottenserver/tags/0.2.12
 
 		Compiling
 			Launch a terminal, and type this command:
 				cd 0.2.12/ && make
-
-		Linker eror
-			If you receive a linker error saying something with 'libboost',
-			try pasting the following commands to terminal and then move back
-			to compiling again:
-				ln /usr/lib/libboost_regex-mt.so /usr/lib/libboost_regex.so && ln /usr/lib/libboost_regex-mt.a /usr/lib/libboost_regex.a && ln /usr/lib/libboost_thread-mt.so /usr/lib/libboost_thread.so && ln /usr/lib/libboost_thread-mt.a /usr/lib/libboost_thread.a
 
 	Windows
 		Code::Blocks
