* Updated CHANGELOG with changed files. * Precompiled header should be included from all .cpp files. * Changed config variable names so that it is easier to understand what they are used for.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5480 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -36,7 +36,10 @@
 	M		slime.xml
 	M		slime2.xml
 	M	npc/lib/npcsystem/npchandler.lua
-	M	talkactions/scripts/deathlist.lua
+		talkactions/scripts/
+	M		buyprem.lua
+	M		changesex.lua
+	M		deathlist.lua
 		XML/
 	M		outfits.xml
 	M		mounts.xml
