* Cleanups from Tryllers commit (same functionality is still there). * Fixed vocation client ids for market. * Added slottype ammo to light sources.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5567 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -60,6 +60,7 @@
 		XML/
 	M		outfits.xml
 	M		mounts.xml
+	M		vocations.xml
 	M	weapons/weapons.xml
 ]
 
@@ -104,5 +105,7 @@
 	Optimized ItemType code to save up to 75MB memory.
 	Fixed a bug with premium account code causing it to remove 1 day everytime you would login.
 	Fixed magicfields item ids, fields spawned from map will always use the persistent id, fields used in combat will always use the expiring id.
+	The arrow slot can now only be used for ammunition.
+	Vocation base speed configurable in vocations.xml.
 	A lot of miscellaneous cleanups, fixes and optimizations.
 ]
