--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -20,9 +20,11 @@
 	M = Modified.
 	A = Added.
 
+	M	The Forgotten Server.exe
 	M	data/npc/lib/npcsystem/modules.lua
 ]
 
 [ Milestone
 	Corrected Lua error function arguments in NPC system modules.
+	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 ]
