* Protocol 9.5 (otb changes: http://pastebin.com/raw.php?i=FCmxcQSg) * Fixed compiling error. * Updated items.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5583 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -22,11 +22,15 @@
 
 	M	The Forgotten Server.exe
 		data/
-	M		items/items.xml
+	M		global.lua
+			items/
+	M			items.otb
+	M			items.xml
 	M		npc/lib/npcsystem/modules.lua
 ]
 
 [ Milestone
+	Game protocol 9.50 support.
 	Corrected Lua error function arguments in NPC system modules.
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Updated items.
