* Corrected a lot of items * Corrected "look" for armors (vocations descr) * Corrected a lot of attributes like level, cap and others
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5611 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -37,6 +37,7 @@
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Magic level skill boost will now show up in market details.
 	Element damage and type will now show up in market details (also corrected the message in item description).
+	Corrected a lot of items attributes.
 	Replaced the old reverseFluidMap which wasn't working as intended with a new server-to-client map.
 	Rewrote how shopItems table worked in NPC ShopModule to work with items of same id but subtype that differs (i.e. different liquids in same fluid container).
 	Updated items.
