--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -33,7 +33,7 @@
 ]
 
 [ Milestone
-	Game protocol 9.50/9.51 support.
+	Game protocol 9.52 support.
 	Corrected Lua error function arguments in NPC system modules.
 	Increased NETWORKMESSAGE_MAXSIZE to prevent debugs if packets exceeded the old size.
 	Magic level skill boost will now show up in market details.
