* Game protocol 9.61 support (9.6 clients can still login). * 9.61 otb, changes: http://pastebin.com/raw.php?i=XQjpjHjL * Removed a few unnecessary "LIMIT 1" in queries where we only use the primary key. * Initial offline training code. * Updated the unjustified kill message so that it appears in white instead of red. * Compiling is now -O3 by default instead of -O2. * Player follow should now use less CPU power. * New Lua function: doPlayerSetOfflineTrainingSkill(cid, skill). * Fixed a few events in Game class not being stopped on shutdown. * Fixed a look description bug for shields. * Fixed a bug where "questlog has been updated" message would be sent on login. * Fixed so that Area of Effect damage will be the same on the entire area. Before this change you could hit two demon skeletons with different damage on the same avalanche rune, with this change you will deal the same damage to both on the same attack. * Fixed a crash that occurred when removing a ground tile.
git-svn-id: svn://svn.otland.net/private/forgottenserver/branches/0.2@5773 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -21,9 +21,11 @@
 	A = Added.
 
 	M The Forgotten Server.exe
+	M data/items/items.otb
 ]
 
 [ Milestone
+	Game protocol 9.61 support (9.6 clients can still login).
 	Anti House Trashing.
 	Fixed so summons that aren't summoned by players will poff instead of drop corpse.
 	Added English Chat and improved some chat code.
